[gd_scene load_steps=3 format=2]

[ext_resource path="res://demo/scripts/AuthDemo.gd" type="Script" id=1]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="AuthDemo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 924.0
margin_bottom = 37.0
text = "DegenHF ECC Authentication Demo"
align = 1
valign = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 924.0
margin_bottom = 78.0
text = "Initializing..."
align = 1
valign = 1

[node name="UsernameField" type="LineEdit" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 924.0
margin_bottom = 106.0
placeholder_text = "Username"

[node name="PasswordField" type="LineEdit" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 924.0
margin_bottom = 134.0
secret = true
placeholder_text = "Password"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 924.0
margin_bottom = 162.0
alignment = 1

[node name="LoginButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 387.0
margin_right = 437.0
margin_bottom = 24.0
text = "Login"

[node name="RegisterButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 441.0
margin_right = 501.0
margin_bottom = 24.0
text = "Register"

[node name="LogoutButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 505.0
margin_right = 537.0
margin_bottom = 24.0
text = "Logout"
visible = false

[node name="VerifyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 541.0
margin_right = 587.0
margin_bottom = 24.0
text = "Verify"
visible = false